<resources>
    <string name="app_name">permisos</string>
    <string name="item_cherry">Cereza</string>
    <string name="item_coconut">Coco</string>
    <string name="item_fruit">Fruta</string>
    <string name="item_raspberry">Frambuesa</string>
    <string name="item_strawberry">Fresa</string>
    <string name="item_orange">Naranja</string>
    <string name="item_pineapple">Piña</string>
    <string name="item_watermelon">Sandia</string>
    <string name="item_grapes">Uva</string>
    <string name="item_reset">Reiniciar</string>
    <string name="item_delete">Eliminar</string>
</resources>
