<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:icon="@drawable/fruts"
        android:title="@string/item_fruit"
        app:showAsAction="ifRoom">
        <menu>
            <item
                android:id="@+id/cherries"
                android:icon="@drawable/cherries"
                android:title="@string/item_cherry"
                app:showAsAction="ifRoom" />
            <item
                android:id="@+id/coconut"
                android:icon="@drawable/coconut"
                android:title="@string/item_coconut"
                app:showAsAction="ifRoom" />
            <item
                android:id="@+id/raspberry"
                android:icon="@drawable/raspberry"
                android:title="@string/item_raspberry"
                app:showAsAction="ifRoom" />
            <item
                android:id="@+id/strawberry"
                android:icon="@drawable/strawberry"
                android:title="@string/item_strawberry"
                app:showAsAction="ifRoom" />
            <item
                android:id="@+id/orange"
                android:icon="@drawable/orange"
                android:title="@string/item_orange"
                app:showAsAction="ifRoom" />
            <item
                android:id="@+id/pineapple"
                android:icon="@drawable/pineapple"
                android:title="@string/item_pineapple"
                app:showAsAction="ifRoom" />
            <item
                android:id="@+id/watermelon"
                android:icon="@drawable/watermelon"
                android:title="@string/item_watermelon"
                app:showAsAction="ifRoom" />
            <item
                android:id="@+id/grapes"
                android:icon="@drawable/grapes"
                android:title="@string/item_grapes"
                app:showAsAction="ifRoom" />
        </menu>
    </item>
</menu>